--- a/banco2/src/main/resources/application.properties
+++ b/banco2/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=banco2
+
+spring.datasource.url=jdbc:mysql://localhost/banco
+spring.datasource.username=root
+spring.datasource.password=Geografia123
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+server.error.include-stacktrace=never
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.ddl-auto=update
+
+
